<resources>
    <string name="app_name">Heard</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_username">user@pursuit.org</string>
    <string name="dummy_password">password</string>
    <string name="favorite_artists">Favorite Artists</string>
    <string name="find_artists">Find Artists</string>
    <string name="search_nearby">Search Nearby</string>
    <string name="email">e-mail</string>
    <string name="password">password</string>
    <string name="sign_in">Sign In</string>
    <string name="login_checkbox">Remember Me</string>
    <string name="add_artist">Add Artist</string>
    <string name="sign_up">New User ?   Sign Up</string>
    <string name="username">username</string>
    <string name="heard_welcome">HEARD!</string>
</resources>
